Fixed overflow-x caused by backTriangles

--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -109,7 +109,11 @@ nav {
     animation:objectAnimate2 17s infinite; 
 
 }
-
+@media (max-width:500px) {
+    .backTriangle:nth-of-type(2){
+        margin-left:30vw;
+    }
+}
 .panel{
     display:flex; 
     width:100vw;
